16_subseq/grade.txt
Grading at Fri May  8 20:03:14 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:12:9: error: invalid type argument of unary ‘*’ (have ‘int’)
     if (*array[i]==NULL) return 0;
         ^
The code did not compile!

Overall Grade: F
